fix message edit visibility

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -761,7 +761,7 @@ a:hover {
 }
 
 .msg_edit {
-    visibility: hidden!important;
+    visibility: hidden;
     cursor: pointer;
 }
 
